# analisis-habitacional-argentino

./: README.md
TPE/: README.md
TPI/: CMakeLists.txt  README.md  auxiliares.cpp  auxiliares.h  definiciones.h  ejercicios.cpp  main.cpp
TPI/Datos/: README.md  esperadoCR_100_2018.th  esperadoCR_2018.th  esperadoCR_2020.th
TPI/Tests/: corregirRegionTEST.cpp  costoSubsidioMejoraTEST.cpp  creceElTeleworkingEnCiudadesGrandesTEST.cpp  esEncuestaValidaTEST.cpp  generarJoinTEST.cpp  histHabitacionalTEST.cpp  histogramaDeAnillosConcentricosTEST.cpp  laCasaEstaQuedandoChicaTEST.cpp  muestraHomogeneaTEST.cpp  ordenarRegionYCODUSUTEST.cpp  quitarIndividuosTEST.cpp
